--- a/1.html
+++ b/1.html
@@ -1,1 +1,12 @@
-ok  i love you
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>行业出租</title>
+</head>
+<body>
+    <!-- 嵌入 Telegram 链接 -->
+    <iframe src="https://t.me/zhixiangtg" style="width:100%; height:100vh; border:none;"></iframe>
+</body>
+</html>
