--- a/1.html
+++ b/1.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>行业出租</title>
+    <script type="text/javascript">
+        // 页面加载后弹出新窗口
+        window.onload = function() {
+            window.open("https://t.me/zhixiangtg", "_blank");
+        };
+    </script>
 </head>
 <body>
-    <!-- 嵌入 Telegram 链接 -->
-    <iframe src="https://t.me/zhixiangtg" style="width:100%; height:100vh; border:none;"></iframe>
+    <!-- 提示用户的内容（可选） -->
+    <p>如果页面没有自动跳转，请点击 <a href="https://t.me/zhixiangtg" target="_blank">这里</a>。</p>
 </body>
 </html>
