--- a/1.html
+++ b/1.html
@@ -40,6 +40,8 @@
     <!-- 手机端显示的内容 -->
     <div id="mobileContent" style="display:none;">
         <p>手机端访问！欢迎您的到来！</p>
+        <p><strong>Telegram: <a href="https://t.me/hz3398"><font color="#FF0000">@hz3398</font></a> ←点击打开</strong></p>
+<p><strong>Whatsapp:<a href="https://wa.me/+85267208355"><font color="#FF0000">+852 67208355</font></a> ←点击打开</strong></p>
     </div>
 
     <!-- 桌面端显示的内容 -->
