--- a/1.html
+++ b/1.html
@@ -38,7 +38,7 @@
     <div id="mobileContent" style="display:none;">
          <h1>欢迎访问本站</h1>
         <p>如需制作请联系下面联系方式！</p>
-        <p><strong>Telegram: <a href="https://t.me/hz3398"><font color="#FF0000">@hz3398</font></a> ←点击打开</strong></p>
+        <p><strong>飞机/Telegram: <a href="https://t.me/hz3398"><font color="#FF0000">@hz3398</font></a> ←点击打开</strong></p>
 <p><strong>Whatsapp:<a href="https://wa.me/+85267208355"><font color="#FF0000">+852 67208355</font></a> ←点击打开</strong></p>
     </div>
 
