--- a/1.html
+++ b/1.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>专业办理各种国外证件</title>
-	<meta name="description" content="专业办理各国护照签证,绿卡,身份证ID,驾驶证DL,居留证,文凭,学位,证书,银行存折,军官证,各种证明,水电费账单等。可制作真假证件，按需求制作，也可以按要求定制排版，制作速度快，全球发货。因为专业所以值得信赖！" />
+<title>专业制作</title>
+	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 
 
@@ -24,12 +24,12 @@
 	
 	<article>
 	<header>
-		<h1 class="STYLE1">专业办理各种国外证件</h1>
+		<h1 class="STYLE1">专业制作</h1>
 	</header>
 	
 				<section class="text_areas">
 			<h3>办理业务</h3>
-<p>专业办理各国护照签证,绿卡,身份证ID,驾驶证DL,居留证,文凭,学位,证书,银行存折,军官证,各种证明,水电费账单等。可制作真假证件，按需求制作，也可以按要求定制排版，制作速度快，全球发货。因为专业所以值得信赖！</p>
+<p>按需求制作，也可以按要求定制排版，制作速度快，全球发货。因为专业所以值得信赖！</p>
 		</section>
 		<section class="text_areas">
 			<h3>联系方式</h3>
@@ -41,7 +41,7 @@
 		
 	
 	<footer>
-			&copy; 2025 专业办理各种国外证件
+			&copy; 2025 专业制作
 			 
 	</footer>
 </article>
