--- a/1.html
+++ b/1.html
@@ -19,6 +19,7 @@
 .STYLE2 {color: #FF0000}
 -->
     </style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	
